backend/scanner/nasl/nasl_grammar.output
State 205 conflicts: 1 shift/reduce


Grammar

    0 $accept: tiptop $end

    1 tiptop: instr_decl_list

    2 instr_decl_list: instr_decl
    3                | instr_decl instr_decl_list

    4 instr_decl: instr
    5           | func_decl

    6 func_decl: FUNCTION identifier '(' arg_decl ')' block

    7 arg_decl: %empty
    8         | arg_decl_1

    9 arg_decl_1: identifier
   10           | identifier ',' arg_decl_1

   11 block: '{' instr_list '}'
   12      | '{' '}'

   13 instr_list: instr
   14           | instr instr_list

   15 instr: simple_instr ';'
   16      | block
   17      | if_block
   18      | loop

   19 simple_instr: aff
   20             | post_pre_incr
   21             | rep
   22             | func_call
   23             | ret
   24             | inc
   25             | loc
   26             | glob
   27             | BREAK
   28             | CONTINUE
   29             | %empty

   30 ret: RETURN expr
   31    | RETURN

   32 if_block: IF '(' expr ')' instr
   33         | IF '(' expr ')' instr ELSE instr

   34 loop: for_loop
   35     | while_loop
   36     | repeat_loop
   37     | foreach_loop

   38 for_loop: FOR '(' aff_func ';' expr ';' aff_func ')' instr

   39 while_loop: WHILE '(' expr ')' instr

   40 repeat_loop: REPEAT instr UNTIL expr ';'

   41 foreach_loop: FOREACH identifier '(' expr ')' instr

   42 aff_func: aff
   43         | post_pre_incr
   44         | func_call
   45         | %empty

   46 rep: func_call REP expr

   47 string: STRING1
   48       | STRING2

   49 inc: INCLUDE '(' string ')'

   50 func_call: identifier '(' arg_list ')'

   51 arg_list: arg_list_1
   52         | %empty

   53 arg_list_1: arg
   54           | arg ',' arg_list_1

   55 arg: expr
   56    | identifier ':' expr

   57 aff: lvalue '=' expr
   58    | lvalue PLUS_EQ expr
   59    | lvalue MINUS_EQ expr
   60    | lvalue MULT_EQ expr
   61    | lvalue DIV_EQ expr
   62    | lvalue MODULO_EQ expr
   63    | lvalue R_SHIFT_EQ expr
   64    | lvalue R_USHIFT_EQ expr
   65    | lvalue L_SHIFT_EQ expr

   66 lvalue: identifier
   67       | array_elem

   68 identifier: IDENT
   69           | REP

   70 array_elem: identifier '[' array_index ']'

   71 array_index: expr

   72 post_pre_incr: PLUS_PLUS lvalue
   73              | MINUS_MINUS lvalue
   74              | lvalue PLUS_PLUS
   75              | lvalue MINUS_MINUS

   76 expr: '(' expr ')'
   77     | expr AND expr
   78     | '!' expr
   79     | expr OR expr
   80     | expr '+' expr
   81     | expr '-' expr
   82     | '-' expr
   83     | '~' expr
   84     | expr '*' expr
   85     | expr EXPO expr
   86     | expr '/' expr
   87     | expr '%' expr
   88     | expr '&' expr
   89     | expr '^' expr
   90     | expr '|' expr
   91     | expr R_SHIFT expr
   92     | expr R_USHIFT expr
   93     | expr L_SHIFT expr
   94     | post_pre_incr
   95     | expr MATCH expr
   96     | expr NOMATCH expr
   97     | expr RE_MATCH string
   98     | expr RE_NOMATCH string
   99     | expr '<' expr
  100     | expr '>' expr
  101     | expr EQ expr
  102     | expr NEQ expr
  103     | expr SUPEQ expr
  104     | expr INFEQ expr
  105     | var
  106     | aff
  107     | ipaddr
  108     | atom
  109     | const_array

  110 const_array: '[' list_array_data ']'

  111 list_array_data: array_data
  112                | array_data ',' list_array_data

  113 array_data: simple_array_data
  114           | string ARROW simple_array_data

  115 atom: INTEGER
  116     | STRING2
  117     | STRING1

  118 simple_array_data: atom

  119 var: var_name
  120    | array_elem
  121    | func_call

  122 var_name: identifier

  123 ipaddr: INTEGER '.' INTEGER '.' INTEGER '.' INTEGER

  124 loc: LOCAL arg_decl

  125 glob: GLOBAL arg_decl


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 78
    '%' (37) 87
    '&' (38) 88
    '(' (40) 6 32 33 38 39 41 49 50 76
    ')' (41) 6 32 33 38 39 41 49 50 76
    '*' (42) 84
    '+' (43) 80
    ',' (44) 10 54 112
    '-' (45) 81 82
    '.' (46) 123
    '/' (47) 86
    ':' (58) 56
    ';' (59) 15 38 40
    '<' (60) 99
    '=' (61) 57
    '>' (62) 100
    '[' (91) 70 110
    ']' (93) 70 110
    '^' (94) 89
    '{' (123) 11 12
    '|' (124) 90
    '}' (125) 11 12
    '~' (126) 83
    error (256)
    IF (258) 32 33
    ELSE (259) 33
    EQ (260) 101
    NEQ (261) 102
    SUPEQ (262) 103
    INFEQ (263) 104
    OR (264) 79
    AND (265) 77
    MATCH (266) 95
    NOMATCH (267) 96
    REP (268) 46 69
    FOR (269) 38
    REPEAT (270) 40
    UNTIL (271) 40
    FOREACH (272) 41
    WHILE (273) 39
    BREAK (274) 27
    CONTINUE (275) 28
    FUNCTION (276) 6
    RETURN (277) 30 31
    INCLUDE (278) 49
    LOCAL (279) 124
    GLOBAL (280) 125
    PLUS_PLUS (281) 72 74
    MINUS_MINUS (282) 73 75
    L_SHIFT (283) 93
    R_SHIFT (284) 91
    R_USHIFT (285) 92
    EXPO (286) 85
    PLUS_EQ (287) 58
    MINUS_EQ (288) 59
    MULT_EQ (289) 60
    DIV_EQ (290) 61
    MODULO_EQ (291) 62
    L_SHIFT_EQ (292) 65
    R_SHIFT_EQ (293) 63
    R_USHIFT_EQ (294) 64
    RE_MATCH (295) 97
    RE_NOMATCH (296) 98
    ARROW (297) 114
    IDENT <str> (298) 68
    STRING1 <data> (299) 47 117
    STRING2 <str> (300) 48 116
    INTEGER <num> (301) 115 123
    NOT (302)
    UMINUS (303)
    BIT_NOT (304)


Nonterminals, with rules where they appear

    $accept (73)
        on left: 0
    tiptop (74)
        on left: 1
        on right: 0
    instr_decl_list <node> (75)
        on left: 2 3
        on right: 1 3
    instr_decl <node> (76)
        on left: 4 5
        on right: 2 3
    func_decl <node> (77)
        on left: 6
        on right: 5
    arg_decl <node> (78)
        on left: 7 8
        on right: 6 124 125
    arg_decl_1 <node> (79)
        on left: 9 10
        on right: 8 10
    block <node> (80)
        on left: 11 12
        on right: 6 16
    instr_list <node> (81)
        on left: 13 14
        on right: 11 14
    instr <node> (82)
        on left: 15 16 17 18
        on right: 4 13 14 32 33 38 39 40 41
    simple_instr <node> (83)
        on left: 19 20 21 22 23 24 25 26 27 28 29
        on right: 15
    ret <node> (84)
        on left: 30 31
        on right: 23
    if_block <node> (85)
        on left: 32 33
        on right: 17
    loop <node> (86)
        on left: 34 35 36 37
        on right: 18
    for_loop <node> (87)
        on left: 38
        on right: 34
    while_loop <node> (88)
        on left: 39
        on right: 35
    repeat_loop <node> (89)
        on left: 40
        on right: 36
    foreach_loop <node> (90)
        on left: 41
        on right: 37
    aff_func <node> (91)
        on left: 42 43 44 45
        on right: 38
    rep <node> (92)
        on left: 46
        on right: 21
    string <str> (93)
        on left: 47 48
        on right: 49 97 98 114
    inc <node> (94)
        on left: 49
        on right: 24
    func_call <node> (95)
        on left: 50
        on right: 22 44 46 121
    arg_list <node> (96)
        on left: 51 52
        on right: 50
    arg_list_1 <node> (97)
        on left: 53 54
        on right: 51 54
    arg <node> (98)
        on left: 55 56
        on right: 53 54
    aff <node> (99)
        on left: 57 58 59 60 61 62 63 64 65
        on right: 19 42 106
    lvalue <node> (100)
        on left: 66 67
        on right: 57 58 59 60 61 62 63 64 65 72 73 74 75
    identifier <str> (101)
        on left: 68 69
        on right: 6 9 10 41 50 56 66 70 122
    array_elem <node> (102)
        on left: 70
        on right: 67 120
    array_index <node> (103)
        on left: 71
        on right: 70
    post_pre_incr <node> (104)
        on left: 72 73 74 75
        on right: 20 43 94
    expr <node> (105)
        on left: 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109
        on right: 30 32 33 38 39 40 41 46 55 56 57 58 59 60 61 62 63 64 65 71 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 95 96 97 98 99 100 101 102 103 104
    const_array <node> (106)
        on left: 110
        on right: 109
    list_array_data <node> (107)
        on left: 111 112
        on right: 110 112
    array_data <node> (108)
        on left: 113 114
        on right: 111 112
    atom <node> (109)
        on left: 115 116 117
        on right: 108 118
    simple_array_data <node> (110)
        on left: 118
        on right: 113 114
    var <node> (111)
        on left: 119 120 121
        on right: 105
    var_name <str> (112)
        on left: 122
        on right: 119
    ipaddr <node> (113)
        on left: 123
        on right: 107
    loc <node> (114)
        on left: 124
        on right: 25
    glob <node> (115)
        on left: 125
        on right: 26


State 0

    0 $accept: . tiptop $end

    IF           shift, and go to state 1
    REP          shift, and go to state 2
    FOR          shift, and go to state 3
    REPEAT       shift, and go to state 4
    FOREACH      shift, and go to state 5
    WHILE        shift, and go to state 6
    BREAK        shift, and go to state 7
    CONTINUE     shift, and go to state 8
    FUNCTION     shift, and go to state 9
    RETURN       shift, and go to state 10
    INCLUDE      shift, and go to state 11
    LOCAL        shift, and go to state 12
    GLOBAL       shift, and go to state 13
    PLUS_PLUS    shift, and go to state 14
    MINUS_MINUS  shift, and go to state 15
    IDENT        shift, and go to state 16
    '{'          shift, and go to state 17

    $default  reduce using rule 29 (simple_instr)

    tiptop           go to state 18
    instr_decl_list  go to state 19
    instr_decl       go to state 20
    func_decl        go to state 21
    block            go to state 22
    instr            go to state 23
    simple_instr     go to state 24
    ret              go to state 25
    if_block         go to state 26
    loop             go to state 27
    for_loop         go to state 28
    while_loop       go to state 29
    repeat_loop      go to state 30
    foreach_loop     go to state 31
    rep              go to state 32
    inc              go to state 33
    func_call        go to state 34
    aff              go to state 35
    lvalue           go to state 36
    identifier       go to state 37
    array_elem       go to state 38
    post_pre_incr    go to state 39
    loc              go to state 40
    glob             go to state 41


State 1

   32 if_block: IF . '(' expr ')' instr
   33         | IF . '(' expr ')' instr ELSE instr

    '('  shift, and go to state 42


State 2

   69 identifier: REP .

    $default  reduce using rule 69 (identifier)


State 3

   38 for_loop: FOR . '(' aff_func ';' expr ';' aff_func ')' instr

    '('  shift, and go to state 43


State 4

   40 repeat_loop: REPEAT . instr UNTIL expr ';'

    IF           shift, and go to state 1
    REP          shift, and go to state 2
    FOR          shift, and go to state 3
    REPEAT       shift, and go to state 4
    FOREACH      shift, and go to state 5
    WHILE        shift, and go to state 6
    BREAK        shift, and go to state 7
    CONTINUE     shift, and go to state 8
    RETURN       shift, and go to state 10
    INCLUDE      shift, and go to state 11
    LOCAL        shift, and go to state 12
    GLOBAL       shift, and go to state 13
    PLUS_PLUS    shift, and go to state 14
    MINUS_MINUS  shift, and go to state 15
    IDENT        shift, and go to state 16
    '{'          shift, and go to state 17

    $default  reduce using rule 29 (simple_instr)

    block          go to state 22
    instr          go to state 44
    simple_instr   go to state 24
    ret            go to state 25
    if_block       go to state 26
    loop           go to state 27
    for_loop       go to state 28
    while_loop     go to state 29
    repeat_loop    go to state 30
    foreach_loop   go to state 31
    rep            go to state 32
    inc            go to state 33
    func_call      go to state 34
    aff            go to state 35
    lvalue         go to state 36
    identifier     go to state 37
    array_elem     go to state 38
    post_pre_incr  go to state 39
    loc            go to state 40
    glob           go to state 41


State 5

   41 foreach_loop: FOREACH . identifier '(' expr ')' instr

    REP    shift, and go to state 2
    IDENT  shift, and go to state 16

    identifier  go to state 45


State 6

   39 while_loop: WHILE . '(' expr ')' instr

    '('  shift, and go to state 46


State 7

   27 simple_instr: BREAK .

    $default  reduce using rule 27 (simple_instr)


State 8

   28 simple_instr: CONTINUE .

    $default  reduce using rule 28 (simple_instr)


State 9

    6 func_decl: FUNCTION . identifier '(' arg_decl ')' block

    REP    shift, and go to state 2
    IDENT  shift, and go to state 16

    identifier  go to state 47


State 10

   30 ret: RETURN . expr
   31    | RETURN .

    REP          shift, and go to state 2
    PLUS_PLUS    shift, and go to state 14
    MINUS_MINUS  shift, and go to state 15
    IDENT        shift, and go to state 16
    STRING1      shift, and go to state 48
    STRING2      shift, and go to state 49
    INTEGER      shift, and go to state 50
    '-'          shift, and go to state 51
    '('          shift, and go to state 52
    '['          shift, and go to state 53
    '!'          shift, and go to state 54
    '~'          shift, and go to state 55

    $default  reduce using rule 31 (ret)

    func_call      go to state 56
    aff            go to state 57
    lvalue         go to state 36
    identifier     go to state 58
    array_elem     go to state 59
    post_pre_incr  go to state 60
    expr           go to state 61
    const_array    go to state 62
    atom           go to state 63
    var            go to state 64
    var_name       go to state 65
    ipaddr         go to state 66


State 11

   49 inc: INCLUDE . '(' string ')'

    '('  shift, and go to state 67


State 12

  124 loc: LOCAL . arg_decl

    REP    shift, and go to state 2
    IDENT  shift, and go to state 16

    $default  reduce using rule 7 (arg_decl)

    arg_decl    go to state 68
    arg_decl_1  go to state 69
    identifier  go to state 70


State 13

  125 glob: GLOBAL . arg_decl

    REP    shift, and go to state 2
    IDENT  shift, and go to state 16

    $default  reduce using rule 7 (arg_decl)

    arg_decl    go to state 71
    arg_decl_1  go to state 69
    identifier  go to state 70


State 14

   72 post_pre_incr: PLUS_PLUS . lvalue

    REP    shift, and go to state 2
    IDENT  shift, and go to state 16

    lvalue      go to state 72
    identifier  go to state 73
    array_elem  go to state 38


State 15

   73 post_pre_incr: MINUS_MINUS . lvalue

    REP    shift, and go to state 2
    IDENT  shift, and go to state 16

    lvalue      go to state 74
    identifier  go to state 73
    array_elem  go to state 38


State 16

   68 identifier: IDENT .

    $default  reduce using rule 68 (identifier)


State 17

   11 block: '{' . instr_list '}'
   12      | '{' . '}'

    IF           shift, and go to state 1
    REP          shift, and go to state 2
    FOR          shift, and go to state 3
    REPEAT       shift, and go to state 4
    FOREACH      shift, and go to state 5
    WHILE        shift, and go to state 6
    BREAK        shift, and go to state 7
    CONTINUE     shift, and go to state 8
    RETURN       shift, and go to state 10
    INCLUDE      shift, and go to state 11
    LOCAL        shift, and go to state 12
    GLOBAL       shift, and go to state 13
    PLUS_PLUS    shift, and go to state 14
    MINUS_MINUS  shift, and go to state 15
    IDENT        shift, and go to state 16
    '{'          shift, and go to state 17
    '}'          shift, and go to state 75

    $default  reduce using rule 29 (simple_instr)

    block          go to state 22
    instr_list     go to state 76
    instr          go to state 77
    simple_instr   go to state 24
    ret            go to state 25
    if_block       go to state 26
    loop           go to state 27
    for_loop       go to state 28
    while_loop     go to state 29
    repeat_loop    go to state 30
    foreach_loop   go to state 31
    rep            go to state 32
    inc            go to state 33
    func_call      go to state 34
    aff            go to state 35
    lvalue         go to state 36
    identifier     go to state 37
    array_elem     go to state 38
    post_pre_incr  go to state 39
    loc            go to state 40
    glob           go to state 41


State 18

    0 $accept: tiptop . $end

    $end  shift, and go to state 78


State 19

    1 tiptop: instr_decl_list .

    $default  reduce using rule 1 (tiptop)


State 20

    2 instr_decl_list: instr_decl .
    3                | instr_decl . instr_decl_list

    IF           shift, and go to state 1
    REP          shift, and go to state 2
    FOR          shift, and go to state 3
    REPEAT       shift, and go to state 4
    FOREACH      shift, and go to state 5
    WHILE        shift, and go to state 6
    BREAK        shift, and go to state 7
    CONTINUE     shift, and go to state 8
    FUNCTION     shift, and go to state 9
    RETURN       shift, and go to state 10
    INCLUDE      shift, and go to state 11
    LOCAL        shift, and go to state 12
    GLOBAL       shift, and go to state 13
    PLUS_PLUS    shift, and go to state 14
    MINUS_MINUS  shift, and go to state 15
    IDENT        shift, and go to state 16
    '{'          shift, and go to state 17

    ';'       reduce using rule 29 (simple_instr)
    $default  reduce using rule 2 (instr_decl_list)

    instr_decl_list  go to state 79
    instr_decl       go to state 20
    func_decl        go to state 21
    block            go to state 22
    instr            go to state 23
    simple_instr     go to state 24
    ret              go to state 25
    if_block         go to state 26
    loop             go to state 27
    for_loop         go to state 28
    while_loop       go to state 29
    repeat_loop      go to state 30
    foreach_loop     go to state 31
    rep              go to state 32
    inc              go to state 33
    func_call        go to state 34
    aff              go to state 35
    lvalue           go to state 36
    identifier       go to state 37
    array_elem       go to state 38
    post_pre_incr    go to state 39
    loc              go to state 40
    glob             go to state 41


State 21

    5 instr_decl: func_decl .

    $default  reduce using rule 5 (instr_decl)


State 22

   16 instr: block .

    $default  reduce using rule 16 (instr)


State 23

    4 instr_decl: instr .

    $default  reduce using rule 4 (instr_decl)


State 24

   15 instr: simple_instr . ';'

    ';'  shift, and go to state 80


State 25

   23 simple_instr: ret .

    $default  reduce using rule 23 (simple_instr)


State 26

   17 instr: if_block .

    $default  reduce using rule 17 (instr)


State 27

   18 instr: loop .

    $default  reduce using rule 18 (instr)


State 28

   34 loop: for_loop .

    $default  reduce using rule 34 (loop)


State 29

   35 loop: while_loop .

    $default  reduce using rule 35 (loop)


State 30

   36 loop: repeat_loop .

    $default  reduce using rule 36 (loop)


State 31

   37 loop: foreach_loop .

    $default  reduce using rule 37 (loop)


State 32

   21 simple_instr: rep .

    $default  reduce using rule 21 (simple_instr)


State 33

   24 simple_instr: inc .

    $default  reduce using rule 24 (simple_instr)


State 34

   22 simple_instr: func_call .
   46 rep: func_call . REP expr

    REP  shift, and go to state 81

    $default  reduce using rule 22 (simple_instr)


State 35

   19 simple_instr: aff .

    $default  reduce using rule 19 (simple_instr)


State 36

   57 aff: lvalue . '=' expr
   58    | lvalue . PLUS_EQ expr
   59    | lvalue . MINUS_EQ expr
   60    | lvalue . MULT_EQ expr
   61    | lvalue . DIV_EQ expr
   62    | lvalue . MODULO_EQ expr
   63    | lvalue . R_SHIFT_EQ expr
   64    | lvalue . R_USHIFT_EQ expr
   65    | lvalue . L_SHIFT_EQ expr
   74 post_pre_incr: lvalue . PLUS_PLUS
   75              | lvalue . MINUS_MINUS

    PLUS_PLUS    shift, and go to state 82
    MINUS_MINUS  shift, and go to state 83
    PLUS_EQ      shift, and go to state 84
    MINUS_EQ     shift, and go to state 85
    MULT_EQ      shift, and go to state 86
    DIV_EQ       shift, and go to state 87
    MODULO_EQ    shift, and go to state 88
    L_SHIFT_EQ   shift, and go to state 89
    R_SHIFT_EQ   shift, and go to state 90
    R_USHIFT_EQ  shift, and go to state 91
    '='          shift, and go to state 92


State 37

   50 func_call: identifier . '(' arg_list ')'
   66 lvalue: identifier .
   70 array_elem: identifier . '[' array_index ']'

    '('  shift, and go to state 93
    '['  shift, and go to state 94

    $default  reduce using rule 66 (lvalue)


State 38

   67 lvalue: array_elem .

    $default  reduce using rule 67 (lvalue)


State 39

   20 simple_instr: post_pre_incr .

    $default  reduce using rule 20 (simple_instr)


State 40

   25 simple_instr: loc .

    $default  reduce using rule 25 (simple_instr)


State 41

   26 simple_instr: glob .

    $default  reduce using rule 26 (simple_instr)


State 42

   32 if_block: IF '(' . expr ')' instr
   33         | IF '(' . expr ')' instr ELSE instr

    REP          shift, and go to state 2
    PLUS_PLUS    shift, and go to state 14
    MINUS_MINUS  shift, and go to state 15
    IDENT        shift, and go to state 16
    STRING1      shift, and go to state 48
    STRING2      shift, and go to state 49
    INTEGER      shift, and go to state 50
    '-'          shift, and go to state 51
    '('          shift, and go to state 52
    '['          shift, and go to state 53
    '!'          shift, and go to state 54
    '~'          shift, and go to state 55

    func_call      go to state 56
    aff            go to state 57
    lvalue         go to state 36
    identifier     go to state 58
    array_elem     go to state 59
    post_pre_incr  go to state 60
    expr           go to state 95
    const_array    go to state 62
    atom           go to state 63
    var            go to state 64
    var_name       go to state 65
    ipaddr         go to state 66


State 43

   38 for_loop: FOR '(' . aff_func ';' expr ';' aff_func ')' instr

    REP          shift, and go to state 2
    PLUS_PLUS    shift, and go to state 14
    MINUS_MINUS  shift, and go to state 15
    IDENT        shift, and go to state 16

    $default  reduce using rule 45 (aff_func)

    aff_func       go to state 96
    func_call      go to state 97
    aff            go to state 98
    lvalue         go to state 36
    identifier     go to state 37
    array_elem     go to state 38
    post_pre_incr  go to state 99


State 44

   40 repeat_loop: REPEAT instr . UNTIL expr ';'

    UNTIL  shift, and go to state 100


State 45

   41 foreach_loop: FOREACH identifier . '(' expr ')' instr

    '('  shift, and go to state 101


State 46

   39 while_loop: WHILE '(' . expr ')' instr

    REP          shift, and go to state 2
    PLUS_PLUS    shift, and go to state 14
    MINUS_MINUS  shift, and go to state 15
    IDENT        shift, and go to state 16
    STRING1      shift, and go to state 48
    STRING2      shift, and go to state 49
    INTEGER      shift, and go to state 50
    '-'          shift, and go to state 51
    '('          shift, and go to state 52
    '['          shift, and go to state 53
    '!'          shift, and go to state 54
    '~'          shift, and go to state 55

    func_call      go to state 56
    aff            go to state 57
    lvalue         go to state 36
    identifier     go to state 58
    array_elem     go to state 59
    post_pre_incr  go to state 60
    expr           go to state 102
    const_array    go to state 62
    atom           go to state 63
    var            go to state 64
    var_name       go to state 65
    ipaddr         go to state 66


State 47

    6 func_decl: FUNCTION identifier . '(' arg_decl ')' block

    '('  shift, and go to state 103


State 48

  117 atom: STRING1 .

    $default  reduce using rule 117 (atom)


State 49

  116 atom: STRING2 .

    $default  reduce using rule 116 (atom)


State 50

  115 atom: INTEGER .
  123 ipaddr: INTEGER . '.' INTEGER '.' INTEGER '.' INTEGER

    '.'  shift, and go to state 104

    $default  reduce using rule 115 (atom)


State 51

   82 expr: '-' . expr

    REP          shift, and go to state 2
    PLUS_PLUS    shift, and go to state 14
    MINUS_MINUS  shift, and go to state 15
    IDENT        shift, and go to state 16
    STRING1      shift, and go to state 48
    STRING2      shift, and go to state 49
    INTEGER      shift, and go to state 50
    '-'          shift, and go to state 51
    '('          shift, and go to state 52
    '['          shift, and go to state 53
    '!'          shift, and go to state 54
    '~'          shift, and go to state 55

    func_call      go to state 56
    aff            go to state 57
    lvalue         go to state 36
    identifier     go to state 58
    array_elem     go to state 59
    post_pre_incr  go to state 60
    expr           go to state 105
    const_array    go to state 62
    atom           go to state 63
    var            go to state 64
    var_name       go to state 65
    ipaddr         go to state 66


State 52

   76 expr: '(' . expr ')'

    REP          shift, and go to state 2
    PLUS_PLUS    shift, and go to state 14
    MINUS_MINUS  shift, and go to state 15
    IDENT        shift, and go to state 16
    STRING1      shift, and go to state 48
    STRING2      shift, and go to state 49
    INTEGER      shift, and go to state 50
    '-'          shift, and go to state 51
    '('          shift, and go to state 52
    '['          shift, and go to state 53
    '!'          shift, and go to state 54
    '~'          shift, and go to state 55

    func_call      go to state 56
    aff            go to state 57
    lvalue         go to state 36
    identifier     go to state 58
    array_elem     go to state 59
    post_pre_incr  go to state 60
    expr           go to state 106
    const_array    go to state 62
    atom           go to state 63
    var            go to state 64
    var_name       go to state 65
    ipaddr         go to state 66


State 53

  110 const_array: '[' . list_array_data ']'

    STRING1  shift, and go to state 107
    STRING2  shift, and go to state 108
    INTEGER  shift, and go to state 109

    string             go to state 110
    list_array_data    go to state 111
    array_data         go to state 112
    atom               go to state 113
    simple_array_data  go to state 114


State 54

   78 expr: '!' . expr

    REP          shift, and go to state 2
    PLUS_PLUS    shift, and go to state 14
    MINUS_MINUS  shift, and go to state 15
    IDENT        shift, and go to state 16
    STRING1      shift, and go to state 48
    STRING2      shift, and go to state 49
    INTEGER      shift, and go to state 50
    '-'          shift, and go to state 51
    '('          shift, and go to state 52
    '['          shift, and go to state 53
    '!'          shift, and go to state 54
    '~'          shift, and go to state 55

    func_call      go to state 56
    aff            go to state 57
    lvalue         go to state 36
    identifier     go to state 58
    array_elem     go to state 59
    post_pre_incr  go to state 60
    expr           go to state 115
    const_array    go to state 62
    atom           go to state 63
    var            go to state 64
    var_name       go to state 65
    ipaddr         go to state 66


State 55

   83 expr: '~' . expr

    REP          shift, and go to state 2
    PLUS_PLUS    shift, and go to state 14
    MINUS_MINUS  shift, and go to state 15
    IDENT        shift, and go to state 16
    STRING1      shift, and go to state 48
    STRING2      shift, and go to state 49
    INTEGER      shift, and go to state 50
    '-'          shift, and go to state 51
    '('          shift, and go to state 52
    '['          shift, and go to state 53
    '!'          shift, and go to state 54
    '~'          shift, and go to state 55

    func_call      go to state 56
    aff            go to state 57
    lvalue         go to state 36
    identifier     go to state 58
    array_elem     go to state 59
    post_pre_incr  go to state 60
    expr           go to state 116
    const_array    go to state 62
    atom           go to state 63
    var            go to state 64
    var_name       go to state 65
    ipaddr         go to state 66


State 56

  121 var: func_call .

    $default  reduce using rule 121 (var)


State 57

  106 expr: aff .

    $default  reduce using rule 106 (expr)


State 58

   50 func_call: identifier . '(' arg_list ')'
   66 lvalue: identifier .
   70 array_elem: identifier . '[' array_index ']'
  122 var_name: identifier .

    '('  shift, and go to state 93
    '['  shift, and go to state 94

    PLUS_PLUS    reduce using rule 66 (lvalue)
    MINUS_MINUS  reduce using rule 66 (lvalue)
    PLUS_EQ      reduce using rule 66 (lvalue)
    MINUS_EQ     reduce using rule 66 (lvalue)
    MULT_EQ      reduce using rule 66 (lvalue)
    DIV_EQ       reduce using rule 66 (lvalue)
    MODULO_EQ    reduce using rule 66 (lvalue)
    L_SHIFT_EQ   reduce using rule 66 (lvalue)
    R_SHIFT_EQ   reduce using rule 66 (lvalue)
    R_USHIFT_EQ  reduce using rule 66 (lvalue)
    '='          reduce using rule 66 (lvalue)
    $default     reduce using rule 122 (var_name)


State 59

   67 lvalue: array_elem .
  120 var: array_elem .

    PLUS_PLUS    reduce using rule 67 (lvalue)
    MINUS_MINUS  reduce using rule 67 (lvalue)
    PLUS_EQ      reduce using rule 67 (lvalue)
    MINUS_EQ     reduce using rule 67 (lvalue)
    MULT_EQ      reduce using rule 67 (lvalue)
    DIV_EQ       reduce using rule 67 (lvalue)
    MODULO_EQ    reduce using rule 67 (lvalue)
    L_SHIFT_EQ   reduce using rule 67 (lvalue)
    R_SHIFT_EQ   reduce using rule 67 (lvalue)
    R_USHIFT_EQ  reduce using rule 67 (lvalue)
    '='          reduce using rule 67 (lvalue)
    $default     reduce using rule 120 (var)


State 60

   94 expr: post_pre_incr .

    $default  reduce using rule 94 (expr)


State 61

   30 ret: RETURN expr .
   77 expr: expr . AND expr
   79     | expr . OR expr
   80     | expr . '+' expr
   81     | expr . '-' expr
   84     | expr . '*' expr
   85     | expr . EXPO expr
   86     | expr . '/' expr
   87     | expr . '%' expr
   88     | expr . '&' expr
   89     | expr . '^' expr
   90     | expr . '|' expr
   91     | expr . R_SHIFT expr
   92     | expr . R_USHIFT expr
   93     | expr . L_SHIFT expr
   95     | expr . MATCH expr
   96     | expr . NOMATCH expr
   97     | expr . RE_MATCH string
   98     | expr . RE_NOMATCH string
   99     | expr . '<' expr
  100     | expr . '>' expr
  101     | expr . EQ expr
  102     | expr . NEQ expr
  103     | expr . SUPEQ expr
  104     | expr . INFEQ expr

    EQ          shift, and go to state 117
    NEQ         shift, and go to state 118
    SUPEQ       shift, and go to state 119
    INFEQ       shift, and go to state 120
    OR          shift, and go to state 121
    AND         shift, and go to state 122
    MATCH       shift, and go to state 123
    NOMATCH     shift, and go to state 124
    L_SHIFT     shift, and go to state 125
    R_SHIFT     shift, and go to state 126
    R_USHIFT    shift, and go to state 127
    EXPO        shift, and go to state 128
    RE_MATCH    shift, and go to state 129
    RE_NOMATCH  shift, and go to state 130
    '<'         shift, and go to state 131
    '>'         shift, and go to state 132
    '|'         shift, and go to state 133
    '^'         shift, and go to state 134
    '&'         shift, and go to state 135
    '+'         shift, and go to state 136
    '-'         shift, and go to state 137
    '*'         shift, and go to state 138
    '/'         shift, and go to state 139
    '%'         shift, and go to state 140

    $default  reduce using rule 30 (ret)


State 62

  109 expr: const_array .

    $default  reduce using rule 109 (expr)


State 63

  108 expr: atom .

    $default  reduce using rule 108 (expr)


State 64

  105 expr: var .

    $default  reduce using rule 105 (expr)


State 65

  119 var: var_name .

    $default  reduce using rule 119 (var)


State 66

  107 expr: ipaddr .

    $default  reduce using rule 107 (expr)


State 67

   49 inc: INCLUDE '(' . string ')'

    STRING1  shift, and go to state 141
    STRING2  shift, and go to state 142

    string  go to state 143


State 68

  124 loc: LOCAL arg_decl .

    $default  reduce using rule 124 (loc)


State 69

    8 arg_decl: arg_decl_1 .

    $default  reduce using rule 8 (arg_decl)


State 70

    9 arg_decl_1: identifier .
   10           | identifier . ',' arg_decl_1

    ','  shift, and go to state 144

    $default  reduce using rule 9 (arg_decl_1)


State 71

  125 glob: GLOBAL arg_decl .

    $default  reduce using rule 125 (glob)


State 72

   72 post_pre_incr: PLUS_PLUS lvalue .

    $default  reduce using rule 72 (post_pre_incr)


State 73

   66 lvalue: identifier .
   70 array_elem: identifier . '[' array_index ']'

    '['  shift, and go to state 94

    $default  reduce using rule 66 (lvalue)


State 74

   73 post_pre_incr: MINUS_MINUS lvalue .

    $default  reduce using rule 73 (post_pre_incr)


State 75

   12 block: '{' '}' .

    $default  reduce using rule 12 (block)


State 76

   11 block: '{' instr_list . '}'

    '}'  shift, and go to state 145


State 77

   13 instr_list: instr .
   14           | instr . instr_list

    IF           shift, and go to state 1
    REP          shift, and go to state 2
    FOR          shift, and go to state 3
    REPEAT       shift, and go to state 4
    FOREACH      shift, and go to state 5
    WHILE        shift, and go to state 6
    BREAK        shift, and go to state 7
    CONTINUE     shift, and go to state 8
    RETURN       shift, and go to state 10
    INCLUDE      shift, and go to state 11
    LOCAL        shift, and go to state 12
    GLOBAL       shift, and go to state 13
    PLUS_PLUS    shift, and go to state 14
    MINUS_MINUS  shift, and go to state 15
    IDENT        shift, and go to state 16
    '{'          shift, and go to state 17

    ';'       reduce using rule 29 (simple_instr)
    $default  reduce using rule 13 (instr_list)

    block          go to state 22
    instr_list     go to state 146
    instr          go to state 77
    simple_instr   go to state 24
    ret            go to state 25
    if_block       go to state 26
    loop           go to state 27
    for_loop       go to state 28
    while_loop     go to state 29
    repeat_loop    go to state 30
    foreach_loop   go to state 31
    rep            go to state 32
    inc            go to state 33
    func_call      go to state 34
    aff            go to state 35
    lvalue         go to state 36
    identifier     go to state 37
    array_elem     go to state 38
    post_pre_incr  go to state 39
    loc            go to state 40
    glob           go to state 41


State 78

    0 $accept: tiptop $end .

    $default  accept


State 79

    3 instr_decl_list: instr_decl instr_decl_list .

    $default  reduce using rule 3 (instr_decl_list)


State 80

   15 instr: simple_instr ';' .

    $default  reduce using rule 15 (instr)


State 81

   46 rep: func_call REP . expr
